# Projet2A_UbEJR

./: .env.sample  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
database_scripts/: init_db.sql  init_db_test.sql  populate_db.sql  populate_orderables.sql  populate_users.sql
doc/: classdiagram.md  classdiagram_lightweight.md  dbdiagram.md
doc/suivi/:  2025.09.11-semaine3.md   2025.09.11-week2.md  2025.09.04-week1.md  2025.09.11-week2.md  2025.09.18-week3.md  2025.09.25-week4.md  2025.10.02-week5.md  2025.10.09-week6.md  2025.10.16-week7.md  2025.10.23-week8.md  2025.10.30-week9.md  2025.11.06-week10.md  2025.11.13-week11.md  2025.11.20-week12.md  2025.MM.DD-weekX.md
src/App/: API.py  AdminController.py  AuthentificationController.py  BundleController.py  CustomerController.py  DriverController.py  ItemController.py  JWTBearer.py  UserController.py  WebController.py  init_app.py
src/DAO/: AddressDAO.py  AdminDAO.py  BundleDAO.py  CustomerDAO.py  DBConnector.py  DeliveryDAO.py  DriverDAO.py  ItemDAO.py  OrderDAO.py  OrderableDAO.py  UserRepo.py
src/Model/: APIBundle.py  APICustomer.py  APIDriver.py  APIItem.py  APIOrder.py  Address.py  Admin.py  Bundle.py  Customer.py  Delivery.py  Driver.py  Item.py  Order.py  Orderable.py  User.py
src/Service/: AddressService.py  BundleService.py  CustomerService.py  DriverService.py  GoogleMapService.py  ItemService.py  JWTService.py  KitchenService.py  MenuService.py  OrderService.py  (+3 more)
static/: style.css
templates/: auth.html  base.html  bundles.html  items.html  menu.html  profile.html
tests/: conftest.py
(+45 files in other folders)
